--- a/Style.css
+++ b/Style.css
@@ -1,3 +1,9 @@
 body * {
-    border: 1px rgba(7, 8, 12, 0.5) solid;
+    border: 1px rgba(2, 110, 44, 0.89) solid;
+}
+#back{
+    background-color:#F5F4F0 ;
+}
+#padding{
+    padding: 5px;
 }
