--- a/Style.css
+++ b/Style.css
@@ -12,7 +12,7 @@
     font-size: 13px;
 }
 .name{
-    font-size: 30px;text-transform: uppercase;
+    font-size: 25px;text-transform: uppercase;
 }
 .WebEng{
     font-size: 13px;
@@ -22,7 +22,7 @@
 }
 .avatar{
     text-align: center;
-    background-color:orange ;
+    background-color:#555557 ;
 }
 .checked {
     color: orange;
@@ -50,11 +50,52 @@
 .empty{
     height: 20px;
     color:transparent;
-}.dot {
-     height: 10px;
-     width: 10px;
-     background-color: #bbb;
-     border-radius: 50%;
-     display: inline-block;
-     border:2px red solid;
- }
+}
+ul.timeline {
+    list-style-type: none;
+    position: relative;
+    padding-left: 1.5rem;
+}
+
+ul.timeline:before {
+    content: ' ';
+    background: #555557;
+    display: inline-block;
+    position: absolute;
+    left: 16px;
+    width: 4px;
+    height: 100%;
+    z-index: 400;
+    border-radius: 1rem;
+}
+
+li.timeline-item {
+    margin: 20px 0;
+}
+
+.timeline-arrow {
+    border-top: 0.5rem solid transparent;
+    border-right: 0.5rem solid #fff;
+    border-bottom: 0.5rem solid transparent;
+    display: block;
+    position: absolute;
+    left: 2rem;
+}
+
+li.timeline-item::before {
+    content: ' ';
+    background: orange;
+    display: inline-block;
+    position: absolute;
+    border-radius: 50%;
+    border: 3px solid #555557;
+    left: 11px;
+    width: 14px;
+    height: 14px;
+    z-index: 400;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+}
+.text-gray {
+    color: #999;
+}
+
